--- a/SBC.WPF/Views/ConfirmDialog.axaml
+++ b/SBC.WPF/Views/ConfirmDialog.axaml
@@ -17,8 +17,21 @@
     WindowStartupLocation="CenterOwner"
     mc:Ignorable="d">
 
-    <Grid RowDefinitions="25, *">
+    <Grid RowDefinitions="35, *, Auto">
         <DockPanel Grid.Row="0" Background="{StaticResource HeaderBrush}">
+            <Image
+                Width="14"
+                Height="14"
+                Margin="5,0,4,0"
+                VerticalAlignment="Center"
+                RenderOptions.BitmapInterpolationMode="HighQuality"
+                Source="/Resources/Icons/questionMark.png" />
+            <TextBlock
+                VerticalAlignment="Center"
+                DockPanel.Dock="Left"
+                Foreground="White"
+                Text="{Binding Title}" />
+
             <Button
                 Width="20"
                 Height="20"
@@ -49,47 +62,33 @@
             </Button>
         </DockPanel>
 
-        <StackPanel Grid.Row="1" Margin="20">
-            <StackPanel Orientation="Horizontal">
-                <Image
-                    Width="24"
-                    RenderOptions.BitmapInterpolationMode="HighQuality"
-                    Source="/Resources/Icons/questionMark.png" />
-                <TextBlock
-                    Margin="10,0,0,0"
-                    VerticalAlignment="Center"
-                    FontSize="18"
-                    FontWeight="Bold"
-                    Text="{Binding Title}" />
-            </StackPanel>
+        <StackPanel Grid.Row="1" Margin="30,25,0,0">
+            <TextBlock
+                FontSize="14"
+                Text="{Binding Message}"
+                TextWrapping="Wrap" />
 
-            <StackPanel Margin="20,10,0,0">
-                <TextBlock
-                    FontSize="14"
-                    Text="{Binding Message}"
-                    TextWrapping="Wrap" />
+            <CheckBox
+                Margin="0,5,0,0"
+                Content="Don't ask again"
+                IsChecked="{Binding DontAskAgain, Mode=TwoWay}"
+                IsVisible="False" />
+        </StackPanel>
 
-                <CheckBox
-                    Margin="0,5,0,0"
-                    Content="Don't ask again"
-                    IsChecked="{Binding DontAskAgain, Mode=TwoWay}"
-                    IsVisible="False" />
-            </StackPanel>
-
-            <StackPanel
-                Margin="50,20,0,0"
-                HorizontalAlignment="Right"
-                Orientation="Horizontal"
-                Spacing="10">
-                <Button
-                    Classes="dialog-style"
-                    Click="Yes_Click"
-                    Content="Yes" />
-                <Button
-                    Classes="dialog-style"
-                    Click="No_Click"
-                    Content="No" />
-            </StackPanel>
+        <StackPanel
+            Grid.Row="2"
+            Margin="25,20,20,25"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal"
+            Spacing="10">
+            <Button
+                Classes="dialog-style"
+                Click="Yes_Click"
+                Content="Yes" />
+            <Button
+                Classes="dialog-style"
+                Click="No_Click"
+                Content="No" />
         </StackPanel>
     </Grid>
 </Window>
