--- a/SBC.WPF/Views/ExceptionDialog.axaml
+++ b/SBC.WPF/Views/ExceptionDialog.axaml
@@ -17,9 +17,32 @@
     WindowStartupLocation="CenterOwner"
     mc:Ignorable="d">
 
-    <Grid RowDefinitions="25, *">
+    <Grid RowDefinitions="35, *, Auto">
         <!--  Header with Close Button  -->
-        <DockPanel Grid.Row="0" Background="{StaticResource HeaderBrush}">
+        <DockPanel
+            Grid.Row="0"
+            Height="35"
+            Margin="0"
+            Background="{StaticResource HeaderBrush}"
+            LastChildFill="True">
+            <!--  Icon  -->
+            <Image
+                Width="14"
+                Height="14"
+                Margin="5,0,4,0"
+                VerticalAlignment="Center"
+                DockPanel.Dock="Left"
+                Source="/Resources/Icons/ErrorIcon.png" />
+
+            <!--  Title Text  -->
+            <TextBlock
+                x:Name="TitleText"
+                VerticalAlignment="Center"
+                DockPanel.Dock="Left"
+                FontSize="12"
+                Foreground="White" />
+
+            <!--  Close Button  -->
             <Button
                 Width="20"
                 Height="20"
@@ -50,35 +73,49 @@
         </DockPanel>
 
         <!--  Main Content  -->
-        <StackPanel Grid.Row="1" Margin="20">
-            <StackPanel Orientation="Horizontal">
-                <Image
-                    Width="24"
-                    RenderOptions.BitmapInterpolationMode="HighQuality"
-                    Source="/Resources/Icons/warningIcon.png" />
-                <TextBlock
-                    Margin="10,0,0,0"
-                    VerticalAlignment="Center"
-                    FontSize="18"
-                    FontWeight="Bold"
-                    Text="{Binding TitleText}" />
-            </StackPanel>
-
+        <StackPanel Grid.Row="1" Margin="10,20,0,0">
             <TextBlock
-                Margin="35,10,0,0"
-                FontSize="14"
-                Text="{Binding Message}"
+                x:Name="MessageText"
+                Text="Message"
                 TextWrapping="Wrap" />
 
-            <StackPanel
-                Margin="50,10,0,0"
-                HorizontalAlignment="Right"
-                Orientation="Horizontal">
-                <Button
-                    Classes="dialog-style"
-                    Click="OnOkClick"
-                    Content="OK" />
-            </StackPanel>
+            <TextBlock
+                x:Name="DetailsBlock"
+                FontSize="12"
+                Foreground="Gray"
+                IsVisible="False"
+                Text="Details"
+                TextWrapping="Wrap" />
         </StackPanel>
+
+        <StackPanel
+            Grid.Row="2"
+            Margin="0,25,10,20"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal"
+            Spacing="10">
+
+            <Button
+                x:Name="RetryButton"
+                Classes="dialog-style"
+                Click="RetryButton_Click"
+                Content="Retry"
+                IsVisible="False" />
+
+            <Button
+                x:Name="DetailsButton"
+                Classes="dialog-style"
+                Click="DetailsButton_Click"
+                Content="Details"
+                IsVisible="False" />
+
+            <Button
+                x:Name="OkButton"
+                Margin="0,0,10,0"
+                Classes="dialog-style"
+                Click="OkButton_Click"
+                Content="OK" />
+        </StackPanel>
+
     </Grid>
 </Window>
