1. Changed splash screen progress bar's background, height 2. implemented dynamic icon changing in hamburger menu, serial  and Ethernet button
SCRUM-107 / SCRUM-126
3. Fixed - Styling of button fly-out working

--- a/SBC.WPF/Resources/Styles/ButtonFlyoutMenuItemsStyles.axaml
+++ b/SBC.WPF/Resources/Styles/ButtonFlyoutMenuItemsStyles.axaml
@@ -2,11 +2,13 @@
     <Design.PreviewWith>
         <Border Padding="20">
             <!--  Add Controls for Previewer Here  -->
+            <Button Content="Test" />
+
         </Border>
     </Design.PreviewWith>
 
     <!--  Add Styles Here  -->
-	
+
     <!--  MenuItem  -->
     <!--  Default MenuItem style  -->
     <Style Selector="MenuItem">
@@ -30,8 +32,8 @@
     </Style>
 
     <!--  Custom class for disabled appearance  -->
-    <Style Selector="MenuItem.disabled">
-        <Setter Property="Foreground" Value="#888888" />
+    <Style Selector="MenuItem.disabled /template/ ContentPresenter">
+        <Setter Property="Foreground" Value="Gray" />
     </Style>
 
     <!--  Button Fly-out  -->
