SCRUM-47 Review Points 1. Fixed - all footer icons and labels (back-end and appearance) 2. Connection Settings Page height / width 3. Fixed - Connection Settings Page - on Test button icons will not change, only on Apply button click icons will be changed 4. Fixed - hover on Cross button while exiting the application 5. Applied a confirmation dialog on applying settings on connection settings page

--- a/SBC.WPF/Resources/ResourceDictionary/LightTheme.axaml
+++ b/SBC.WPF/Resources/ResourceDictionary/LightTheme.axaml
@@ -6,7 +6,7 @@
     <Color x:Key="ButtonBackgroundColor">#3D79D1</Color>
     <Color x:Key="ButtonForegroundColor">White</Color>
     <Color x:Key="ScrollBackgroundColor">#D9D9D9</Color>
-    <Color x:Key="ButtonHoverColor">#3d3dd1</Color>
+    <Color x:Key="ButtonHoverColor">#1553ad</Color>
     <Color x:Key="ButtonPointerOverColor">#2e2eb8</Color>
 
     <!--  Brush resources  -->
