--- a/SBC.WPF/Views/ConfirmDialog.axaml
+++ b/SBC.WPF/Views/ConfirmDialog.axaml
@@ -19,22 +19,16 @@
 
     <Grid RowDefinitions="35, *, Auto">
         <DockPanel Grid.Row="0" Background="{StaticResource HeaderBrush}">
-            <Image
-                Width="14"
-                Height="14"
-                Margin="5,0,4,0"
-                VerticalAlignment="Center"
-                RenderOptions.BitmapInterpolationMode="HighQuality"
-                Source="/Resources/Icons/questionMark.png" />
             <TextBlock
+                Margin="5,0,0,0"
                 VerticalAlignment="Center"
                 DockPanel.Dock="Left"
                 Foreground="White"
                 Text="{Binding Title}" />
 
             <Button
-                Width="20"
-                Height="20"
+                Width="35"
+                Height="35"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Center"
                 Background="Transparent"
@@ -75,10 +69,12 @@
                 IsVisible="False" />
         </StackPanel>
 
+        <!--  Yes/No Buttons  -->
         <StackPanel
             Grid.Row="2"
             Margin="25,20,20,25"
             HorizontalAlignment="Right"
+            IsVisible="{Binding ShowYesNo}"
             Orientation="Horizontal"
             Spacing="10">
             <Button
@@ -90,5 +86,19 @@
                 Click="No_Click"
                 Content="No" />
         </StackPanel>
+
+        <!--  OK Button  -->
+        <StackPanel
+            Grid.Row="2"
+            Margin="0,20,0,25"
+            HorizontalAlignment="Center"
+            IsVisible="{Binding ShowOk}">
+            <Button
+                Width="70"
+                Classes="dialog-style"
+                Click="Ok_Click"
+                Content="OK" />
+        </StackPanel>
+
     </Grid>
 </Window>
