--- a/SBC.WPF/Resources/Styles/ButtonFlyoutMenuItemsStyles.axaml
+++ b/SBC.WPF/Resources/Styles/ButtonFlyoutMenuItemsStyles.axaml
@@ -2,8 +2,10 @@
     <Design.PreviewWith>
         <Border Padding="20">
             <!--  Add Controls for Previewer Here  -->
-            <Button Content="Test" />
-
+            <StackPanel Spacing="10">
+                <Button MinWidth="200" Content="Test" />
+                <Button Content="Test1" IsEnabled="False" />
+            </StackPanel>
         </Border>
     </Design.PreviewWith>
 
@@ -13,7 +15,7 @@
     <!--  Default MenuItem style  -->
     <Style Selector="MenuItem">
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="Foreground" Value="Black" />
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundColor}" />
         <Setter Property="Padding" Value="8,4" />
     </Style>
 
