--- a/SBC.WPF/Views/ConnectionSettingsView.axaml
+++ b/SBC.WPF/Views/ConnectionSettingsView.axaml
@@ -41,7 +41,7 @@
             <Button
                 Width="35"
                 Height="35"
-                Margin="240,0,0,0"
+                Margin="235,0,0,0"
                 VerticalAlignment="Center"
                 Background="Transparent"
                 BorderThickness="0"
@@ -106,7 +106,11 @@
                 <ComboBox
                     Width="270"
                     Margin="5,0,0,0"
+                    AutoScrollToSelectedItem="True"
+                    IsTextSearchEnabled="True"
                     ItemsSource="{Binding AvailableBaudRates}"
+                    ScrollViewer.IsDeferredScrollingEnabled="True"
+                    ScrollViewer.VerticalScrollBarVisibility="Visible"
                     SelectedItem="{Binding SelectedBaudRate}" />
             </StackPanel>
 
@@ -232,7 +236,7 @@
                         Classes="myStyled"
                         MaxLength="5"
                         Text="{Binding SelectedPortText, Mode=TwoWay}"
-                        Watermark="Enter port nunmber" />
+                        Watermark="Enter port number" />
 
                     <TextBlock
                         Margin="5,2,0,0"
@@ -244,7 +248,7 @@
 
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal" Margin="0 5 0 0">
+            <StackPanel Margin="0,5,0,0" Orientation="Horizontal">
                 <TextBlock
                     Width="120"
                     VerticalAlignment="Center"
