--- a/SBC.WPF/Resources/ResourceDictionary/ComboBoxItem.axaml
+++ b/SBC.WPF/Resources/ResourceDictionary/ComboBoxItem.axaml
@@ -20,18 +20,18 @@
 
     <ControlTheme x:Key="{x:Type ComboBoxItem}" TargetType="ComboBoxItem">
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="Padding" Value="10 0 10 0" />
+        <Setter Property="Margin" Value="10,0,10,0" />
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="HorizontalContentAlignment" Value="Left" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="BorderBrush" Value="Transparent" />
         <Setter Property="BorderThickness" Value="0" />
+		<Setter Property="Cursor" Value="Hand" />
         <Setter Property="Template">
             <ControlTemplate>
                 <ContentPresenter
                     Name="PART_ContentPresenter"
-                    Margin="5,0,10,0"
-                    Padding="{TemplateBinding Padding}"
+                    Padding="5,0,0,0"
                     HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                     VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
                     Background="{TemplateBinding Background}"
