--- a/SBC.WPF/Resources/Styles/CheckBoxStyles.axaml
+++ b/SBC.WPF/Resources/Styles/CheckBoxStyles.axaml
@@ -2,7 +2,10 @@
     <Design.PreviewWith>
         <Border Padding="20">
             <!--  Add Controls for Previewer Here  -->
-            <CheckBox Content="test checkbox" />
+            <StackPanel>
+                <CheckBox Content="test checkbox" />
+                <CheckBox Content="test" IsThreeState="True" />
+            </StackPanel>
         </Border>
     </Design.PreviewWith>
 
@@ -17,8 +20,8 @@
                         <Border
                             x:Name="Border"
                             Grid.Column="0"
-                            Width="14"
-                            Height="14"
+                            Width="16"
+                            Height="16"
                             VerticalAlignment="Center"
                             Background="Transparent"
                             BorderBrush="Black"
@@ -28,7 +31,7 @@
                         <Path
                             x:Name="CheckMark"
                             Grid.Column="0"
-                            Margin="3"
+                            Margin="2,0,0,0"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             Data="M-2,3 L1,6 L6,1"
